--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 </head>
 <body>
     <div class="logo">
-        </div>
+    <img src="images/HumanEdgeCaseCircle.jpg" alt="Human Edge Case Logo">
+</div>
     <h1>Human Edge Case</h1>
     <p>Innovating autonomous vehicle data collection, analysis, and AV training tools.</p>
     <p>Our website is currently under development. Stay tuned for exciting updates on the PECA enclosure and our full suite of solutions.</p>
