--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="logo">
-    <img src="images/HumanEdgeCaseCircle.jpg" alt="Human Edge Case Logo">
+    <img src="HumanEdgeCaseCircle.jpg" alt="Human Edge Case Logo">
 </div>
     <h1>Human Edge Case</h1>
     <p>Innovating autonomous vehicle data collection, analysis, and AV training tools.</p>
