--- a/index.html
+++ b/index.html
@@ -31,16 +31,17 @@
         .logo {
             margin-bottom: 20px;
         }
+        /* This CSS rule will control the image size */
         .logo img {
-            max-width: 300px; /* Adjust size as needed */
+            max-width: 300px; /* This will make your image max 300px wide */
             height: auto;
         }
     </style>
 </head>
 <body>
     <div class="logo">
-    <images/HumanEdgeCaseCircle.jpg>
-</div>
+        <img src="https://raw.githubusercontent.com/Human-Edge-Case/human-edge-case.ai-website/main/images/HumanEdgeCaseCircle.jpg" alt="Human Edge Case Logo">
+    </div>
     <h1>Human Edge Case</h1>
     <p>Innovating autonomous vehicle data collection, analysis, and AV training tools.</p>
     <p>Our website is currently under development. Stay tuned for exciting updates on the PECA enclosure and our full suite of solutions.</p>
