--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="https://raw.githubusercontent.com/Human-Edge-Case/human-edge-case.ai-website/main/images/HumanEdgeCaseCircle.jpg" alt="Human Edge Case Logo">
+        <img src="https://raw.githubusercontent.com/Human-Edge-Case/human-edge-case.ai-website/main/images/HumanEdgeCaseCircle.jpg" alt="Human Edge Case Logo - Autonomous Vehicle Data Solutions">
     </div>
     <h1>Human Edge Case</h1>
     <p>Innovating autonomous vehicle data collection, analysis, and AV training tools.</p>
